--- a/Shiseidme/ScreenletsViewControllers/SignUpViewController.xib
+++ b/Shiseidme/ScreenletsViewControllers/SignUpViewController.xib
@@ -9,19 +9,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="Shiseidme" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignUpViewController" customModule="Shiseidme" customModuleProvider="target">
             <connections>
-                <outlet property="screenlet" destination="RXX-pL-HL9" id="oxf-7d-w4U"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="screenlet" destination="Q3N-5O-LOm" id="K0O-dW-f5X"/>
+                <outlet property="view" destination="Q3N-5O-LOm" id="vQo-bh-U0I"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RXX-pL-HL9" customClass="LoginScreenlet">
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q3N-5O-LOm" customClass="SignUpScreenlet">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="shiseidme"/>
@@ -29,14 +30,8 @@
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="RXX-pL-HL9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="MRm-DS-0gf"/>
-                <constraint firstItem="RXX-pL-HL9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ULw-N0-Byz"/>
-                <constraint firstItem="RXX-pL-HL9" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="ala-C0-OQk"/>
-                <constraint firstItem="RXX-pL-HL9" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="kEU-9i-P8n"/>
-            </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="33.5" y="53.5"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
     </objects>
 </document>
