--- a/Shiseidme/Themes/LoginView_shiseidme.xib
+++ b/Shiseidme/Themes/LoginView_shiseidme.xib
@@ -11,11 +11,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LoginView_shiseidme" customModule="Shiseidme" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="347" height="355"/>
+            <rect key="frame" x="0.0" y="0.0" width="347" height="616"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button hidden="YES" opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IUm-aw-kAf">
-                    <rect key="frame" x="0.0" y="155.5" width="347" height="44"/>
+                    <rect key="frame" x="0.0" y="286" width="347" height="44"/>
                     <color key="backgroundColor" red="0.083623558282852173" green="0.66497266292572021" blue="0.84832382202148438" alpha="0.87" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="b3f-Ri-XlM"/>
@@ -37,10 +37,40 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QyT-Vh-USo" userLabel="Basic Auth View">
-                    <rect key="frame" x="0.0" y="0.0" width="347" height="355"/>
+                    <rect key="frame" x="0.0" y="0.0" width="347" height="616"/>
                     <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hzs-rx-l4v">
+                            <rect key="frame" x="0.0" y="554" width="347" height="62"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OD5-oQ-e9F">
+                                    <rect key="frame" x="241" y="18" width="61" height="26"/>
+                                    <state key="normal" title="Sign up">
+                                        <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="signUpButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="qd1-mf-4yg"/>
+                                    </connections>
+                                </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMF-Ql-Upt">
+                                    <rect key="frame" x="54" y="21" width="179" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="OD5-oQ-e9F" firstAttribute="leading" secondItem="dMF-Ql-Upt" secondAttribute="trailing" constant="8" id="GGD-st-tv8"/>
+                                <constraint firstItem="dMF-Ql-Upt" firstAttribute="centerX" secondItem="hzs-rx-l4v" secondAttribute="centerX" constant="-30" id="W6Z-zP-HCD"/>
+                                <constraint firstAttribute="bottom" secondItem="OD5-oQ-e9F" secondAttribute="bottom" constant="18" id="Zz9-zW-R0R"/>
+                                <constraint firstItem="dMF-Ql-Upt" firstAttribute="top" secondItem="hzs-rx-l4v" secondAttribute="top" constant="21" id="eme-9O-ILN"/>
+                                <constraint firstAttribute="height" constant="62" id="iUE-7N-IMe"/>
+                                <constraint firstAttribute="bottom" secondItem="dMF-Ql-Upt" secondAttribute="bottom" constant="20" id="omX-Qy-Zan"/>
+                                <constraint firstItem="OD5-oQ-e9F" firstAttribute="top" secondItem="hzs-rx-l4v" secondAttribute="top" constant="18" id="xU7-YG-QG9"/>
+                            </constraints>
+                        </view>
                         <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lQM-e9-Lbg" customClass="DefaultTextField">
-                            <rect key="frame" x="0.0" y="120" width="347" height="50"/>
+                            <rect key="frame" x="30" y="273" width="287" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="kR7-TD-EWl"/>
                             </constraints>
@@ -51,7 +81,7 @@
                             </connections>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XBk-dU-LXI" customClass="DefaultTextField">
-                            <rect key="frame" x="0.0" y="178" width="347" height="51"/>
+                            <rect key="frame" x="30" y="331" width="287" height="51"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="51" id="CNl-Mk-h8J"/>
                             </constraints>
@@ -64,58 +94,42 @@
                                 <outlet property="delegate" destination="iN0-l3-epB" id="YVX-sf-eSF"/>
                             </connections>
                         </textField>
-                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kq3-Yb-Mpp">
-                            <rect key="frame" x="0.0" y="254" width="347" height="50"/>
-                            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kq3-Yb-Mpp">
+                            <rect key="frame" x="30" y="407" width="287" height="50"/>
+                            <color key="backgroundColor" red="0.082352941176470587" green="0.49411764705882355" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="T07-nA-0QZ"/>
                             </constraints>
-                            <state key="normal">
-                                <attributedString key="attributedTitle">
-                                    <fragment content="SIGN IN">
-                                        <attributes>
-                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="16" name="HelveticaNeue"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
+                            <state key="normal" title="SIGN IN">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
                                 <action selector="loginButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="iWD-h4-aKT"/>
                             </connections>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo_xl.gif" translatesAutoresizingMaskIntoConstraints="NO" id="QD2-eg-lFq">
-                            <rect key="frame" x="41" y="0.0" width="265" height="107"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_xl.gif" translatesAutoresizingMaskIntoConstraints="NO" id="QD2-eg-lFq">
+                            <rect key="frame" x="41" y="160" width="265" height="100"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="100" id="OUa-nw-Phg"/>
+                            </constraints>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OD5-oQ-e9F">
-                            <rect key="frame" x="233" y="321" width="67" height="26"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Sing up">
-                                <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="singUpButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="NDs-6D-cEA"/>
-                            </connections>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMF-Ql-Upt">
-                            <rect key="frame" x="46" y="324" width="179" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="QD2-eg-lFq" firstAttribute="leading" secondItem="QyT-Vh-USo" secondAttribute="leading" constant="41" id="0ZM-v4-M8c"/>
                         <constraint firstItem="kq3-Yb-Mpp" firstAttribute="top" secondItem="XBk-dU-LXI" secondAttribute="bottom" constant="25" id="2Av-Fy-pC8"/>
-                        <constraint firstAttribute="trailing" secondItem="XBk-dU-LXI" secondAttribute="trailing" id="E4j-Je-nEt"/>
-                        <constraint firstAttribute="trailing" secondItem="kq3-Yb-Mpp" secondAttribute="trailing" id="MEG-Xn-Ea2"/>
+                        <constraint firstAttribute="trailing" secondItem="XBk-dU-LXI" secondAttribute="trailing" constant="30" id="E4j-Je-nEt"/>
+                        <constraint firstAttribute="trailing" secondItem="kq3-Yb-Mpp" secondAttribute="trailing" constant="30" id="MEG-Xn-Ea2"/>
+                        <constraint firstAttribute="bottom" secondItem="hzs-rx-l4v" secondAttribute="bottom" id="PdQ-3M-gf3"/>
                         <constraint firstItem="XBk-dU-LXI" firstAttribute="top" secondItem="lQM-e9-Lbg" secondAttribute="bottom" constant="8" id="Ppk-hF-24l"/>
-                        <constraint firstItem="lQM-e9-Lbg" firstAttribute="top" secondItem="QyT-Vh-USo" secondAttribute="top" constant="120" id="UfE-1G-RXo"/>
-                        <constraint firstItem="lQM-e9-Lbg" firstAttribute="leading" secondItem="QyT-Vh-USo" secondAttribute="leading" id="YnU-0N-2v9"/>
-                        <constraint firstItem="XBk-dU-LXI" firstAttribute="leading" secondItem="QyT-Vh-USo" secondAttribute="leading" id="dws-wk-BIq"/>
-                        <constraint firstAttribute="trailing" secondItem="lQM-e9-Lbg" secondAttribute="trailing" id="hLl-sw-Tnb"/>
-                        <constraint firstItem="kq3-Yb-Mpp" firstAttribute="leading" secondItem="QyT-Vh-USo" secondAttribute="leading" id="toK-Wb-Sds"/>
+                        <constraint firstItem="lQM-e9-Lbg" firstAttribute="top" secondItem="QyT-Vh-USo" secondAttribute="top" constant="273" id="UfE-1G-RXo"/>
+                        <constraint firstAttribute="trailing" secondItem="QD2-eg-lFq" secondAttribute="trailing" constant="41" id="Uug-N0-yiC"/>
+                        <constraint firstAttribute="trailing" secondItem="hzs-rx-l4v" secondAttribute="trailing" id="WRv-hh-S1N"/>
+                        <constraint firstItem="lQM-e9-Lbg" firstAttribute="leading" secondItem="QyT-Vh-USo" secondAttribute="leading" constant="30" id="YnU-0N-2v9"/>
+                        <constraint firstItem="XBk-dU-LXI" firstAttribute="leading" secondItem="QyT-Vh-USo" secondAttribute="leading" constant="30" id="dws-wk-BIq"/>
+                        <constraint firstAttribute="trailing" secondItem="lQM-e9-Lbg" secondAttribute="trailing" constant="30" id="hLl-sw-Tnb"/>
+                        <constraint firstItem="lQM-e9-Lbg" firstAttribute="top" secondItem="QD2-eg-lFq" secondAttribute="bottom" constant="13" id="mlQ-9m-Tu5"/>
+                        <constraint firstItem="hzs-rx-l4v" firstAttribute="leading" secondItem="QyT-Vh-USo" secondAttribute="leading" id="tee-M1-7nd"/>
+                        <constraint firstItem="kq3-Yb-Mpp" firstAttribute="leading" secondItem="QyT-Vh-USo" secondAttribute="leading" constant="30" id="toK-Wb-Sds"/>
                     </constraints>
                 </view>
             </subviews>
@@ -135,9 +149,10 @@
                 <outlet property="authorizeButton" destination="IUm-aw-kAf" id="6tV-qP-yvJ"/>
                 <outlet property="loginButton" destination="kq3-Yb-Mpp" id="XwX-Qs-mrT"/>
                 <outlet property="passwordField" destination="XBk-dU-LXI" id="pmz-6o-jcr"/>
+                <outlet property="signUpView" destination="hzs-rx-l4v" id="R8j-MZ-G8R"/>
                 <outlet property="userNameField" destination="lQM-e9-Lbg" id="4LP-gT-pQO"/>
             </connections>
-            <point key="canvasLocation" x="505.5" y="632.5"/>
+            <point key="canvasLocation" x="505.5" y="790"/>
         </view>
     </objects>
     <resources>
